# construction-sim

./: CMakeLists.txt  ProjectHome.md
data/gfx/GUI/MyGUI/Instruments/: Layers.xml  RTTResources.xml  Skins.xml  TestInstruments.layout
data/gfx/OSG/Liebherr/: ExBucket.ive  ExBucketLink1.mtl  ExHouse.mtl  ExLWheel.ive  ExMainHydralicsCylinder.mtl  ExMainHydralicsPiston.mtl  ExSecondBoom.ive  ExSupportLegL.mtl  ExSupportLegR.mtl  ExUndercarriage.ive
data/gfx/OSG/test/: cube.mtl
data/gfx/Ogre/3dmodels/Liebherr/: Ex.material  ExBlade.mesh  ExBucket.mesh  ExBucketLink1.mesh  ExBucketLink2.mesh  ExHouse.mesh  ExLWheel.mesh  ExMainBoom.mesh  ExMainHydralicsCylinder.mesh  ExMainHydralicsPiston.mesh  ExRWheel.mesh  ExSecondBoom.mesh  ExSecondHydralicsCylinder.mesh  ExSecondHydralicsPiston.mesh  ExSmallCylinder.mesh  ExSmallPiston.mesh  ExSupportLegL.mesh  ExSupportLegR.mesh  ExThirdBoom.mesh  ExUndercarriage.mesh  ExWheel.material
data/gfx/Ogre/ExternalResources/hydrax/: BlueGPUWater.hdx  FastWater.hdx  dark_sea.hdx  dark_sea_lod1.hdx  dark_sea_lod2.hdx
data/gfx/Ogre/Fonts/: GASS.fontdef
data/gfx/Ogre/Materials/base/: DepthShadowmap.shader  DepthShadowmapCaster.material  DepthShadowmapCaster.program  ambient.shader  base.material  common.shader  misc.material  object_text.material  paged_geometry.material  pg_grass.shader  pplbase.shader  sky.material
data/gfx/Ogre/Materials/particle/: Smoke.material
data/gfx/Ogre/Materials/road/: Roads.material
data/gfx/Ogre/Materials/sky/: SkyBox.material
data/gfx/Ogre/Materials/vegetation/: Vegetation.material
data/gfx/Ogre/Particles/: smoke.particle
source/: CMakeLists.txt  GASS.xml  GASSOgre.xml  main.cpp
trunk/data/gfx/GUI/MyGUI/Instruments/: TestInstruments.layout
trunk/data/gfx/OSG/Liebherr/: ExBlade.mtl  ExBucket.mtl  ExBucketLink2.mtl  ExHouse.ive  ExMainBoom.ive  ExRWheel.ive  ExSecondHydralicsPiston.mtl  ExSmallCylinder.mtl  ExSmallPiston.mtl  ExThirdBoom.ive  ExThirdBoom.mtl  ExUndercarriage.mtl  convert.bat
trunk/data/templates/vehicles/physx/excavator/: house.template  undercarrige.template
trunk/source/: CMakeLists.txt  GASS.xml  main.cpp
